2017-03-14  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-EVAL-WHEN): Remove the set-but-not-used
	variable `eval-p'.

2017-03-14  Sam Steingold  <sds@gnu.org>

	Fix bug#687: executable images are broken when configured --with-debug.
	* spvw_memfile.d (find_memdump): Reduce header_size: exclude
	_subr_tab_addr and _symbol_tab_addr from header comparison.

2017-03-13  Bruno Haible  <bruno@clisp.org>

	Implement the undocumented option -mm on many more platforms.
	* spvw.d (parse_options): Accept option '-mm' on all platforms.
	Implement it also on all other platforms where gnulib's vma-iter module
	works, namely on Linux, FreeBSD, NetBSD, OpenBSD, IRIX, OSF/1, Mac OS X,
	Cygwin, BeOS, Haiku.

2017-03-13  Bruno Haible  <bruno@clisp.org>

	Fix result of two autoconf tests in C++ mode.
	The test programs need to either use exit() and include <stdlib.h>, or
	use 'return'.
	* m4/poll.m4 (CL_POLL): Use 'return' instead of 'exit'.
	* m4/shm.m4 (CL_SHM): Likewise.
	* aclocal.m4, src/configure: Regenerated.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Add support for generational GC on NetBSD/x86 and NetBSD/x86_64.
	* lispbibl.d: On NetBSD/x86, choose the same ONE_FREE_BIT_HEAPCODES
	representation as on BeOS/x86. Enable TRIVIALMAP_MEMORY on NetBSD.
	* spvw.d (init_memory): Specify usable address range for NetBSD/x86
	and NetBSD/x86_64.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Terminate endless loop of mmap_zeromap failures after 10 failures.
	This is useful for NetBSD.
	* spvw_mmap.d (spvw_mmap.d): Abort if it fails 10 times in a row with
	identical arguments and error code.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Fix wrong uses of errno.
	* spvw_garcol.d (gar_col_normal): Save OS_errno around fputs call.
	* spvw_garcol_old.d (gar_col_normal): Likewise.
	* spvw_memfile.d (loadmem_from_handle): Save errno around fprintf call.
	* spvw_mmap.d (mmap_init, mmap_zeromap): Likewise.
	* pathname.d (stat_obj): Save errno before exiting with_sstring_0.
